LU-316 Fix changelog deadlock when changelog client is killed

Make sure that all unused filedescriptors are closed to ensure that
when the reader is dead, ther are no holders of the read fd and
we do get EPIPE to our writes.

Signed-off-by: Oleg Drokin <green@whamcloud.com>
Change-Id: Id0a53361862124e6b4febdbb3f8cacce34799e68
Reviewed-on: http://review.whamcloud.com/555
Tested-by: Hudson
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Mikhail Pershin <tappro@whamcloud.com>